...
            "state": "translated",
            "value": "コアイメージ：%1$@、%2$@"
          }
        }
      }
    },
    "Phrases": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フレーズ"
          }
...
            "state": "translated",
            "value": "レベル"
          }
        }
      }
    },
    "Group by verb": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "動詞でまとめる"
          }
...
            "state": "translated",
            "value": "難易度の表示"
          }
        }
      }
    },
    "Difficulty guide": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "難易度の目安"
          }
        }
      }
    },
    "Display difficulty as": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "難易度の表示方法"
          }
        }
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
          }
        }
      }
    },
    "EIKEN grades": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "ヘルプ・お問い合わせ"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "value": "How well did you remember?"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "フレーズの理解度"
          }
        }
      }
    },
    "IELTS and CEFR": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "学習量を設定"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        }
      }
    },
    "Shown softly behind your daily phrases.": {
      "extractionState": "manual",
...
